force-app/main/default/objects/SM_Matching_Case__mdt/SM_Matching_Case__mdt.object-meta.xml
<CustomObject>
    <description>correspondance entre les Type-thème formulaire Web/ Doc courrier et les Type / Sous-Type SMILE</description>
    <label>SM Matching Case</label>
    <pluralLabel>SM Matching Cases</pluralLabel>
</CustomObject>