force-app/main/default/objects/SM_Matching_Case__mdt/fields/Record_Type_Case__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Case__c</fullName>
    <label>Record Type Case</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
                <default>true</default>
                <label>Acquisition</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>