force-app/main/default/objects/SM_Matching_Case__mdt/fields/Sub_Type_Case__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Case__c</fullName>
    <description>Sous type case</description>
    <label>Sub_Type_Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emménagement</fullName>
                <default>true</default>
                <label>Emménagement</label>
            </value>
            <value>
                <fullName>Gestion des données bancaire et moyen de paiement</fullName>
            </value>
            <value>
                <fullName>Modification données personnelles/administrative</fullName>
            </value>
            <value>
                <fullName>Suivi consommation / contestation index</fullName>
            </value>
            <value>
                <fullName>Délai de paiement / plan d&apos;apurement</fullName>
            </value>
            <value>
                <fullName>Aides sociales</fullName>
            </value>
            <value>
                <fullName>Rétractation</fullName>
            </value>
            <value>
                <fullName>Information offres, tarifs et reconduction</fullName>
            </value>
            <value>
                <fullName>Réclamation NV1</fullName>
            </value>
            <value>
                <fullName>A qualifier</fullName>
            </value>
            <value>
                <fullName>Mise en place ou résiliation de prélèvement ou de mensualisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>