force-app/main/default/objects/SM_Matching_Case__mdt/fields/Type_Case__c.field-meta.xml
<CustomField>
    <fullName>Type_Case__c</fullName>
    <label>Type_Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
                <default>true</default>
                <label>Acquisition</label>
            </value>
            <value>
                <fullName>Vie du contrat</fullName>
            </value>
            <value>
                <fullName>Paiement</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Réclamation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>