force-app/main/default/objects/SM_Matching_Case__mdt/fields/Type_Doc__c.field-meta.xml
<CustomField>
    <fullName>Type_Doc__c</fullName>
    <description>types des Documents Numériseur (stockés sur DarkOne)</description>
    <label>Type Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>